Fix footer spacing.

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ h2 {
 }
 
 .footer {
-  margin-bottom: 75px;
+  padding-bottom: 100px;
 }
 
 .contact-button {
